fix: Added self-contained style for Menu component (#177)
* added self-contained style for menu

* added missing styling to make menu self-contained

* Added padding and margin reset to fix self contained styling

* updated test references

* fixed extra padding

* updated test references

* fixed bleeding on list-item

* regenerated test references

* simplify the tests, fix some minor issues

* add example with h1-h6 and disabled items

* remove icon from menu test

* remove icons

--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -42,6 +42,7 @@ $block: #{$fd-namespace}-menu;
     padding-bottom: fd-space(base);
     &__group,
     &__list {
+      @include fd-reset();
       list-style: none;
       margin-bottom: 0;
     }
@@ -49,6 +50,10 @@ $block: #{$fd-namespace}-menu;
       padding-left: 0;
     }
     &__list {
+      @include fd-reset();
+      & > * {
+        @include fd-reset();
+      }
       margin: 0;
       padding: 0;
       list-style: none;
@@ -70,6 +75,7 @@ $block: #{$fd-namespace}-menu;
     &__title {
       display: block;
       margin-bottom: 0;
+      margin-top: 0;
       padding: $fd-menu-title-padding $fd-menu-item-padding-x;
       @include fd-type("-1", "normal");
       text-transform: uppercase;
@@ -77,7 +83,9 @@ $block: #{$fd-namespace}-menu;
       @include fd-var-color("background-color", $fd-menu-title-background-color, --fd-menu-title-background-color);
     }
     &__item {
+      @include fd-reset();
       display: block;
+      transition: all $fd-animation--speed ease-in;
       @include action-cursor();
       padding: $fd-menu-item-padding-y $fd-menu-item-padding-x;
       @include fd-var-color("background-color", $fd-menu-item-background-color, --fd-menu-item-background-color);
@@ -96,6 +104,19 @@ $block: #{$fd-namespace}-menu;
             @include fd-var-color("background-color", fd-color-state("selected-hover"), --fd-color-background-selected-hover);
           }
       }
+      @include fd-active-pressed-selected() {
+        @include fd-var-color("color", fd-color-state("selected", "action"), --fd-color-action-selected);
+        outline: none;
+      }
+      &:focus {
+        outline-style: dotted;
+        outline-width: 1px;
+        @include fd-var-color("outline-color", fd-color-state("hover", "action"), --fd-color-action-focus);
+      }
+      @include fd-disabled() {
+        @include fd-var-color("outline-color", fd-color-state("disabled", "action"), --fd-color-action-disabled);
+        cursor: not-allowed;
+      }
     }
     &--addon-before {
         .fd-menu__item {
@@ -109,7 +130,7 @@ $block: #{$fd-namespace}-menu;
           float: right;
           clear: right;
         }
-        height: 39px;
+        height: 39px;//TODO get rid of hardcoded height
         display: flex;
         justify-content: center;
         align-items: center;
